@@ -1,3 +1,7 @@
+Fri Sep 14 09:52:15 CEST 2007 Christian Anthon <anthon@kiku.dk>
+
+	* gnubg.c, set.c: Make lang change more robust
+
 Mon Sep  3 11:40:07 CEST 2007 Christian Anthon <anthon@kiku.dk>
 
 	* html.c: fix tmpfile creation problem to allow export of gammonline
